--- a/public/display.html
+++ b/public/display.html
@@ -3,183 +3,164 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-  <title>Laserpointer Display v3.13</title>
+  <title>Laserpointer Display (PixiJS)</title>
   <style>
-    body { margin:0; background:black; }
-    canvas { display:block; margin:auto; background:black; }
+    body { margin:0; background:#000; display:flex; justify-content:center; align-items:center; height:100vh; }
     #version {
       position:absolute; top:10px; left:10px;
       color:white; font-family:sans-serif; font-size:14px; opacity:0.6;
+      z-index:10;
     }
+    #canvas-container { width:1024px; height:1024px; }
   </style>
 </head>
 <body>
-  <div id="version">v3.13 (dynamic width per segment)</div>
-  <canvas id="canvas" width="1024" height="1024"></canvas>
+  <div id="version">v3.x (PixiJS)</div>
+  <div id="canvas-container"></div>
+
+  <!-- PIXI.js von CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/pixi.js@7.2.4/dist/browser/pixi.min.js"></script>
+  <!-- Socket.IO Client -->
   <script src="/socket.io/socket.io.js"></script>
+
   <script>
+    // 1) App aufsetzen
+    const app = new PIXI.Application({
+      width: 1024,
+      height: 1024,
+      backgroundColor: 0x000000,
+      antialias: true,
+      resolution: window.devicePixelRatio || 1
+    });
+    document.getElementById("canvas-container").appendChild(app.view);
+
+    // zwei Graphics: eines für Segmente, eines für Puls-Punkt
+    const segmentG = new PIXI.Graphics();
+    const pulseG   = new PIXI.Graphics();
+    app.stage.addChild(segmentG, pulseG);
+
+    // 2) State und Defaults
     const socket = io();
-    socket.emit("identify", { role: "display", deviceId: null });
+    socket.emit("identify", { role:"display", deviceId:null });
 
-    const c    = document.getElementById("canvas"),
-          ctx  = c.getContext("2d"),
-          CX   = c.width/2,
-          CY   = c.height/2;
+    let MAX_H   = 20,
+        MAX_V   = 20,
+        SMOOTH  = 0.15,
+        MIN_W   = 5,
+        MAX_W   = 12;
 
-    // Defaults (admin override möglich)
-    let MAX_H  = 20,
-        MAX_V  = 20,
-        SMOOTH = 0.15;
-
-    socket.on("updateSettings", ({ maxH, maxV, smooth }) => {
-      if (typeof maxH   === "number") MAX_H  = maxH;
-      if (typeof maxV   === "number") MAX_V  = maxV;
-      if (typeof smooth === "number") SMOOTH = smooth;
+    // live-Settings vom Admin
+    socket.on("updateSettings", cfg => {
+      if (typeof cfg.maxH   === "number") MAX_H  = cfg.maxH;
+      if (typeof cfg.maxV   === "number") MAX_V  = cfg.maxV;
+      if (typeof cfg.smooth === "number") SMOOTH = cfg.smooth;
+      if (typeof cfg.minW   === "number") MIN_W  = cfg.minW;
+      if (typeof cfg.maxW   === "number") MAX_W  = cfg.maxW;
     });
 
-    // Pro-Device State
-    const alpha0Map   = {},
-          beta0Map    = {},
-          rawPos      = {},
-          smoothPos   = {},
-          lastColor   = {},
-          lastLight   = {},
-          segments    = [],    // {x1,y1,x2,y2,color,w1,w2}
-          lastWidth   = {};    // deviceId → letzte End-Breite
+    // pro Gerät
+    const alpha0     = {},
+          beta0      = {},
+          rawPos     = {},
+          smoothPos  = {},
+          lastTime   = {},
+          lastColor  = {},
+          lastLight  = {},
+          lastWidth  = {};
 
-    ctx.lineCap  = "round";
-    ctx.lineJoin = "round";
-
+    // Hilfsfunktion
     function parseLight(hsl) {
-      const m = hsl.match(/hsl\(\s*\d+,\s*\d+%,\s*(\d+)%\)/);
+      const m = hsl.match(/hsl\(\s*\d+,\s*\d+%,\s*(\d+)%\s*\)/);
       return m ? +m[1] : 50;
     }
 
-    socket.on("clear", () => {
-      segments.length = 0;
-      ctx.clearRect(0, 0, c.width, c.height);
-      [alpha0Map, beta0Map, rawPos, smoothPos, lastColor, lastLight, lastWidth]
-        .forEach(obj => Object.keys(obj).forEach(k => delete obj[k]));
-    });
-
+    // 3) Motion-Handler
     socket.on("motion", ({ alpha, beta, color, isDrawing, deviceId }) => {
-      if (!deviceId || typeof alpha !== "number" || typeof beta !== "number") return;
+      if (!deviceId || typeof alpha!=="number") return;
       const now = performance.now();
+      const CX  = app.renderer.width/2;
+      const CY  = app.renderer.height/2;
 
-      // Farbe & Lightness
-      lastColor[deviceId] = color;
-      lastLight[deviceId] = parseLight(color);
+      // Farbe & Helligkeit merken
+      lastColor[deviceId]  = color;
+      lastLight[deviceId]  = parseLight(color);
 
-      // Kalibrieren beim ersten Zeichnen
-      if (isDrawing && !(deviceId in alpha0Map)) {
-        alpha0Map[deviceId] = alpha;
-        beta0Map [deviceId] = beta;
-        rawPos   [deviceId] = { x: CX, y: CY };
-        smoothPos[deviceId] = { x: CX, y: CY };
-        lastWidth[deviceId] = 8; // Startbreite
+      // Kalibrierung beim ersten Draw
+      if (isDrawing && !(deviceId in alpha0)) {
+        alpha0[deviceId]    = alpha;
+        beta0 [deviceId]    = beta;
+        rawPos[deviceId]    = { x:CX, y:CY };
+        smoothPos[deviceId] = { x:CX, y:CY, t: now };
+        lastWidth[deviceId] = (MIN_W+MAX_W)/2;
       }
-      if (!(deviceId in alpha0Map)) return;
+      if (!(deviceId in alpha0)) return;
 
-      // Winkel-Delta + Wrap
-      let dA = alpha - alpha0Map[deviceId];
+      // Delta & Wrap
+      let dA = alpha - alpha0[deviceId];
       if (dA > 180)  dA -= 360;
       if (dA < -180) dA += 360;
-      let dB = beta - beta0Map[deviceId];
+      let dB = beta  - beta0 [deviceId];
 
       // Clamp
       dA = Math.max(-MAX_H, Math.min(MAX_H, dA));
       dB = Math.max(-MAX_V, Math.min(MAX_V, dB));
 
-      // Auf Canvas mappen
+      // Map auf Display
       const x = CX - (dA / MAX_H) * CX;
       const y = CY - (dB / MAX_V) * CY;
 
-      // Geschwindigkeit px/s
-      const prev = rawPos[deviceId];
-      const dx   = x - prev.x,
-            dy   = y - prev.y,
-            dt   = (now - (smoothPos[deviceId].t||now)) / 1000,
-            speed= dt>0 ? Math.hypot(dx,dy)/dt : 0;
-      smoothPos[deviceId].t = now;
+      // smoothing
+      const sp = smoothPos[deviceId];
+      sp.x += (x - sp.x) * SMOOTH;
+      sp.y += (y - sp.y) * SMOOTH;
 
-      // speichern für nächstes Mal
+      // Geschwindigkeit (px/s)
+      const dt    = (now - sp.t) / 1000;
+      const dx    = sp.x - rawPos[deviceId].x;
+      const dy    = sp.y - rawPos[deviceId].y;
+      const speed = dt>0 ? Math.hypot(dx,dy)/dt : 0;
+      sp.t = now;
+
+      // Rohkoords speichern
       rawPos[deviceId] = { x, y };
 
       if (isDrawing) {
-        // Map Speed → width 2..12px (oder andere Werte)
-        const threshold = 2000;
-        const norm = Math.min(1, speed/threshold);
-        const minW = 2, maxW = 12;
-        const w2   = maxW - (maxW - minW)*norm;
-        const w1   = lastWidth[deviceId] || w2;
-
-        segments.push({ x1: prev.x, y1: prev.y, x2: x, y2: y,
-                        color, w1, w2 });
+        // Breite je Speed
+        const norm = Math.min(1, speed / 2000);
+        const w2   = MAX_W - (MAX_W - MIN_W)*norm;
+        const w1   = lastWidth[deviceId];
         lastWidth[deviceId] = w2;
+
+        // in Pixi zeichnen: Segment
+        const colHex = PIXI.Color.fromHexString(color).toNumber();
+        segmentG.lineStyle(w1, colHex, 1);
+        segmentG.moveTo(sp.x - (sp.x-x), sp.y - (sp.y-y));
+        segmentG.lineTo(sp.x, sp.y);
       }
     });
 
-    // Render-Loop
-    let pulse = 0, growing = true;
-    function render() {
-      ctx.clearRect(0, 0, c.width, c.height);
+    // 4) Render-Loop für Puls
+    let pulse = 0, grow = true;
+    app.ticker.add(() => {
+      pulse += grow ? 0.2 : -0.2;
+      if (pulse > 2) grow = false;
+      if (pulse < 0) grow = true;
 
-      // Jede Linie in feine Untersegmente zerlegen
-      for (const s of segments) {
-        const dx = s.x2 - s.x1,
-              dy = s.y2 - s.y1,
-              dist = Math.hypot(dx,dy),
-              steps = Math.max(1, Math.ceil(dist/5));
-
-        let px = s.x1, py = s.y1;
-        for (let i = 1; i <= steps; i++) {
-          const t = i/steps,
-                tx = s.x1 + dx*t,
-                ty = s.y1 + dy*t,
-                w  = s.w1 + (s.w2 - s.w1)*t;
-
-          ctx.strokeStyle = s.color;
-          ctx.lineWidth   = w;
-          ctx.beginPath();
-          ctx.moveTo(px, py);
-          ctx.lineTo(tx, ty);
-          ctx.stroke();
-
-          px = tx; py = ty;
-        }
-      }
-
-      // Pulsierende Punkte
-      pulse += growing ? 0.2 : -0.2;
-      if (pulse > 2) growing = false;
-      if (pulse < 0) growing = true;
-
-      for (const id in rawPos) {
-        const { x,y } = rawPos[id];
-        const col     = lastColor[id] || "#fff";
-        const light   = lastLight[id] || 50;
-        const wLast   = lastWidth[id] || 6;
-        const r       = wLast/2 + pulse;
-
+      pulseG.clear();
+      for (let id in smoothPos) {
+        const { x,y } = smoothPos[id];
+        const baseW   = lastWidth[id] || ((MIN_W+MAX_W)/2);
+        const r       = baseW/2 + pulse;
         // Punkt
-        ctx.beginPath();
-        ctx.arc(x,y,r,0,2*Math.PI);
-        ctx.fillStyle = col;
-        ctx.fill();
-
-        // Weißer Ring bei Low-Light
-        if (light < 20) {
-          ctx.beginPath();
-          ctx.arc(x,y,r+3,0,2*Math.PI);
-          ctx.strokeStyle = "#fff";
-          ctx.lineWidth   = 3;
-          ctx.stroke();
+        pulseG.beginFill(PIXI.utils.string2hex(lastColor[id]||"#ffffff"));
+        pulseG.drawCircle(x, y, r);
+        // Low-Light Weißring
+        if ((lastLight[id]||50) < 20) {
+          pulseG.lineStyle(3, 0xffffff, 1);
+          pulseG.drawCircle(x, y, r+3);
         }
       }
-
-      requestAnimationFrame(render);
-    }
-    render();
+    });
   </script>
 </body>
 </html>
