--- a/public/admin.html
+++ b/public/admin.html
@@ -2,97 +2,76 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Admin Panel v3.8</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+  <title>Admin</title>
   <style>
-    body { margin:0; padding:20px; background:#111; color:#fff; font-family:sans-serif; }
-    h1 { margin-top:0; }
-    #status { margin:10px 0; font-weight:bold; }
-    .setting { margin:15px 0; }
-    label { display:inline-block; width:200px; vertical-align:middle; }
-    input[type="number"], input[type="range"] { vertical-align:middle; }
-    #smoothVal { display:inline-block; width:40px; text-align:right; margin-left:8px; }
-    #clear { margin-top:10px; padding:8px 16px; background:#c33; color:#fff; border:none; cursor:pointer; }
-    table { width:100%; margin-top:20px; border-collapse:collapse; }
-    th, td { padding:8px; border:1px solid #444; text-align:left; }
-    th { background:#222; }
+    body { background:#111; color:#eee; font-family:sans-serif; padding:20px }
+    .status { margin-bottom:10px; }
+    .controls { margin-bottom:20px; }
+    label, input { display:block; margin:8px 0; }
+    input[type=range], input[type=number] { width:100%; max-width:300px; }
+    button { margin-top:12px; padding:8px 16px; background:red; border:none; color:#fff; cursor:pointer; }
   </style>
 </head>
 <body>
-  <h1>Admin Panel v3.8</h1>
-  <div id="status">
-    Display: <span id="dispState">–</span>
+  <div class="status">
+    Display: <span id="disp-status" style="color:orange">unbekannt</span>
+  </div>
+  <div class="controls">
+    Handys:
+    <ul id="controls-list"><li>keine</li></ul>
   </div>
 
-  <div class="setting">
-    <label for="maxH">Max. Winkel horizontal (°):</label>
-    <input id="maxH" type="number" value="20" min="0" max="180"/>
-  </div>
-  <div class="setting">
-    <label for="maxV">Max. Winkel vertikal (°):</label>
-    <input id="maxV" type="number" value="20" min="0" max="180"/>
-  </div>
-  <div class="setting">
-    <label for="smooth">Glättung (% – 0 = volle Glättung):</label>
-    <input id="smooth" type="range" min="0" max="100" value="20"/>
-    <span id="smoothVal">20 %</span>
-  </div>
+  <label>Max. Winkel horizontal (°):<input id="horiz" type="number" value="20"/></label>
+  <label>Max. Winkel vertikal (°):  <input id="vert"  type="number" value="20"/></label>
+  <label>Glättung (%):           <input id="smooth" type="range" min="0" max="100" value="15"/></label>
+  <label>Min. Strichstärke (px):  <input id="minW" type="number" min="1" max="50" value="5"/></label>
+  <label>Max. Strichstärke (px):  <input id="maxW" type="number" min="1" max="50" value="12"/></label>
 
   <button id="clear">Canvas löschen</button>
-
-  <h2>Verbundene Handys</h2>
-  <table>
-    <thead><tr><th>Geräte-ID</th><th>IP-Adresse</th></tr></thead>
-    <tbody id="clientList"></tbody>
-  </table>
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
-    socket.emit("identify", { role: "admin", deviceId: null });
+    socket.emit("identify",{role:"admin",deviceId:null});
 
-    const elMaxH     = document.getElementById("maxH");
-    const elMaxV     = document.getElementById("maxV");
-    const elSmooth   = document.getElementById("smooth");
-    const elSmoothVal= document.getElementById("smoothVal");
-    const btnClear   = document.getElementById("clear");
-    const tblBody    = document.getElementById("clientList");
-    const dispState  = document.getElementById("dispState");
+    const ds    = document.getElementById("disp-status"),
+          clist = document.getElementById("controls-list");
 
-    function sendSettings() {
-      const maxH   = parseFloat(elMaxH.value) || 20;
-      const maxV   = parseFloat(elMaxV.value) || 20;
-      // invertierter Slider: 20 % → smooth = 0.80
-      const smooth = 1 - (parseFloat(elSmooth.value) / 100);
-      socket.emit("updateSettings", { maxH, maxV, smooth });
+    socket.on("display-status", ({connected}) => {
+      ds.textContent = connected?"verbunden":"nicht verbunden";
+      ds.style.color = connected?"lightgreen":"crimson";
+    });
+
+    socket.on("controls-status", arr => {
+      clist.innerHTML="";
+      if(arr.length===0){
+        clist.innerHTML="<li>keine</li>";
+      } else {
+        arr.forEach(id=>{
+          const li=document.createElement("li");
+          li.textContent=id;
+          clist.appendChild(li);
+        });
+      }
+    });
+
+    function sendSettings(){
+      socket.emit("admin-settings",{
+        maxH:parseFloat(horiz.value),
+        maxV:parseFloat(vert.value),
+        smooth:parseFloat(smooth.value)/100,
+        minW:parseFloat(minW.value),
+        maxW:parseFloat(maxW.value)
+      });
     }
 
-    elMaxH.addEventListener("change", sendSettings);
-    elMaxV.addEventListener("change", sendSettings);
-    elSmooth.addEventListener("input", () => {
-      elSmoothVal.textContent = elSmooth.value + " %";
-      sendSettings();
+    [horiz,vert,smooth,minW,maxW].forEach(el=>{
+      el.addEventListener(el.type==="range"?"input":"change",sendSettings);
     });
 
-    btnClear.addEventListener("click", () => {
-      socket.emit("clear");
-    });
-
-    // Initial die Settings senden
+    clear.addEventListener("click",()=>socket.emit("clear"));
     sendSettings();
-
-    socket.on("client-list", list => {
-      const hasDisp = list.some(c => c.type === "display");
-      dispState.textContent = hasDisp ? "verbunden ✅" : "nicht verbunden ❌";
-
-      const ctrls = list.filter(c => c.type === "control" && c.active);
-      tblBody.innerHTML = "";
-      ctrls.forEach(({ deviceId, ip }) => {
-        const tr = document.createElement("tr");
-        tr.innerHTML = `<td>${deviceId || "–"}</td><td>${ip}</td>`;
-        tblBody.appendChild(tr);
-      });
-    });
   </script>
 </body>
 </html>
