--- a/public/control.html
+++ b/public/control.html
@@ -2,27 +2,210 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-  <title>Laserpointer Control</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Laserpointer Control v3.11</title>
   <style>
-    body { margin:0; background:#000; color:#fff; font-family:sans-serif; overflow:hidden; }
-    /* Deine vorhandene Styles hier… */
+    /* keine Text-Auswahl/Touch-Callouts bei Buttons */
+    *, button {
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      user-select: none;
+    }
+    body {
+      margin: 0;
+      padding: 20px;
+      background: #000;
+      color: #fff;
+      font-family: sans-serif;
+    }
+    .version {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      font-size: 14px;
+      opacity: 0.7;
+    }
+    .setting {
+      margin: 20px 0;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+    input[type="range"] {
+      -webkit-appearance: none;
+      width: 80%;
+      height: 20px;
+      border-radius: 10px;
+      background: transparent; /* wird per JS gesetzt */
+      cursor: pointer;
+    }
+    input[type="range"]::-webkit-slider-runnable-track {
+      height: 20px;
+      border-radius: 10px;
+    }
+    input[type="range"]::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      width: 24px; height: 24px;
+      margin-top: -2px;
+      background: #fff;
+      border: 1px solid #888;
+      border-radius: 50%;
+    }
+    input[type="range"]::-moz-range-track {
+      height: 20px;
+      border-radius: 10px;
+    }
+    input[type="range"]::-moz-range-thumb {
+      width: 24px; height: 24px;
+      background: #fff;
+      border: 1px solid #888;
+      border-radius: 50%;
+    }
+    .value {
+      width: 50px;
+      text-align: right;
+      font-size: 1rem;
+    }
+    #preview {
+      width: 40px;
+      height: 40px;
+      border: 2px solid #fff;
+      box-sizing: border-box;
+      background: hsl(0,100%,50%);
+    }
+    #laserBtn {
+      position: absolute;
+      bottom: 30%;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      background: #fff;
+      border: none;
+      touch-action: none;
+    }
+    #permBtn {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      padding: 12px 20px;
+      font-size: 16px;
+      z-index: 1000;
+    }
   </style>
 </head>
 <body>
-  <!-- … Deine Buttons, Slider, Farbauswahl … -->
+  <!-- 1) Gyro-Permission-Button -->
+  <button id="permBtn">Gyro freigeben</button>
+
+  <div class="version">v3.11</div>
+
+  <!-- 2) Farbton-Regler -->
+  <div class="setting">
+    <input id="hue" type="range" min="0" max="360" value="0"/>
+    <span id="hueVal" class="value">0°</span>
+  </div>
+
+  <!-- 3) Intensität-Regler -->
+  <div class="setting">
+    <input id="intensity" type="range" min="0" max="100" value="50"/>
+    <span id="intVal" class="value">50 %</span>
+    <div id="preview"></div>
+  </div>
+
+  <!-- 4) Laser-Button -->
+  <button id="laserBtn"></button>
+
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
-    // gleich nach Verbindungsaufbau identifizieren
-    socket.emit("identify", { role:"control", deviceId: /* z.B. UUID oder socket.id */ socket.id });
+    // sofort als Control registrieren
+    let deviceId = localStorage.getItem("deviceId");
+    if (!deviceId) {
+      deviceId = crypto.randomUUID();
+      localStorage.setItem("deviceId", deviceId);
+    }
+    socket.emit("identify", { role: "control", deviceId });
 
-    // Beispiel: sobald gyro-Daten anstehen, send motion:
-    function sendMotion(alpha,beta,color,isDrawing){
-      socket.emit("motion",{ alpha, beta, color, isDrawing, deviceId: socket.id });
+    const permBtn   = document.getElementById("permBtn"),
+          hueSlider = document.getElementById("hue"),
+          hueVal    = document.getElementById("hueVal"),
+          intSlider = document.getElementById("intensity"),
+          intVal    = document.getElementById("intVal"),
+          preview   = document.getElementById("preview"),
+          laserBtn  = document.getElementById("laserBtn");
+
+    let isDrawing = false,
+        hue       = 0,
+        intensity = 50,
+        colorHSL  = `hsl(0,100%,50%)`;
+
+    // Gyro-Permission einholen
+    permBtn.addEventListener("click", async () => {
+      if (typeof DeviceOrientationEvent.requestPermission === "function") {
+        const res = await DeviceOrientationEvent.requestPermission();
+        if (res !== "granted") return alert("Gyro verweigert");
+      }
+      initGyro();
+      permBtn.style.display = "none";
+    });
+
+    function initGyro() {
+      window.addEventListener("deviceorientation", e => {
+        if (!isDrawing || e.alpha==null||e.beta==null) return;
+        socket.emit("motion", {
+          alpha: e.alpha, beta: e.beta,
+          color: colorHSL,
+          isDrawing,
+          deviceId
+        });
+      });
     }
 
-    // … Dein existierender Gyro- & Touch-Code ruft sendMotion auf …
+    // Slider-Backgrounds
+    function setHueBg() {
+      hueSlider.style.background =
+        "linear-gradient(to right,"+
+        "hsl(0,100%,50%), hsl(60,100%,50%), hsl(120,100%,50%), "+
+        "hsl(180,100%,50%), hsl(240,100%,50%), hsl(300,100%,50%), hsl(360,100%,50%)"
+        +")";
+    }
+    function setIntBg() {
+      const mid = `hsl(${hue},100%,50%)`;
+      intSlider.style.background =
+        `linear-gradient(to right, black, ${mid}, white)`;
+    }
+
+    function updateColor() {
+      hue       = +hueSlider.value;
+      intensity = +intSlider.value;
+      hueVal.textContent = hue + "°";
+      intVal.textContent = intensity + " %";
+      colorHSL = `hsl(${hue},100%,${intensity}%)`;
+      preview.style.background = colorHSL;
+      setIntBg();
+    }
+
+    setHueBg();
+    setIntBg();
+    updateColor();
+    hueSlider.addEventListener("input", updateColor);
+    intSlider.addEventListener("input", updateColor);
+
+    // Laser-Button: Touch → Zeichnen start/stop
+    laserBtn.addEventListener("touchstart", e => {
+      e.preventDefault();
+      isDrawing = true;
+    });
+    laserBtn.addEventListener("touchend", e => {
+      e.preventDefault();
+      isDrawing = false;
+    });
+
+    // Kontextmenü ausschalten
+    document.addEventListener("contextmenu", e => e.preventDefault());
   </script>
 </body>
 </html>
