--- a/public/display.html
+++ b/public/display.html
@@ -3,109 +3,115 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-  <title>Laserpointer Display</title>
+  <title>Laserpointer Display – Spline</title>
   <style>
-    body { margin:0; background:#000; }
-    canvas { display:block; margin:auto; background:#000; }
-    #version{ position:absolute; top:10px; left:10px; color:#fff; opacity:0.6; }
+    body { margin:0; background:#000 }
+    canvas { display:block; margin:auto; background:#000 }
   </style>
 </head>
 <body>
-  <div id="version">v3.x (Canvas2D)</div>
   <canvas id="canvas" width="1024" height="1024"></canvas>
-
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
-    socket.emit("identify", { role:"display", deviceId:null });
+    const c      = document.getElementById('canvas'),
+          ctx    = c.getContext('2d'),
+          CX     = c.width/2, CY = c.height/2;
 
-    const canvas = document.getElementById("canvas"),
-          ctx    = canvas.getContext("2d"),
-          CX     = canvas.width/2,
-          CY     = canvas.height/2;
-
-    // Default-Settings (vom Admin überschrieben)
-    let MAX_H = 20, MAX_V = 20, SMOOTH=0.15, MIN_W=5, MAX_W=12;
-
-    socket.on("updateSettings", ({ maxH, maxV, smooth, minW, maxW }) => {
-      if(typeof maxH==="number") MAX_H=safe(maxH);
-      if(typeof maxV==="number") MAX_V=safe(maxV);
-      if(typeof smooth==="number")SMOOTH=smooth;
-      if(typeof minW==="number") MIN_W=minW;
-      if(typeof maxW==="number") MAX_W=maxW;
+    // Admin-Settings (werden per Admin überschrieben)
+    let MAX_H=20, MAX_V=20, SMOOTH=0.15, MIN_W=5, MAX_W=12;
+    socket.on('updateSettings',cfg=>{
+      if(typeof cfg.maxH==='number') MAX_H=cfg.maxH;
+      if(typeof cfg.maxV==='number') MAX_V=cfg.maxV;
+      if(typeof cfg.smooth==='number')SMOOTH=cfg.smooth;
+      if(typeof cfg.minW==='number') MIN_W=cfg.minW;
+      if(typeof cfg.maxW==='number') MAX_W=cfg.maxW;
     });
-    function safe(n){ return isNaN(n)?20:n; }
 
-    let alpha0={}, beta0={}, rawPos={}, smoothPos={}, lastTime={}, lastColor={}, lastLight={}, lastW={};
+    // State pro Device
+    const alpha0={}, beta0={},
+          points={};// deviceId → Array<{x,y,t,color}> (max Länge ~10)
 
-    function parseLight(hsl){
-      const m = hsl.match(/hsl\(\s*\d+,\s*\d+%,\s*(\d+)%\)/);
+    // Lightness-Parser
+    function getLight(hsl){
+      const m=hsl.match(/,\s*(\d+)%\)/);
       return m?+m[1]:50;
     }
 
-    socket.on("clear",()=>{
-      ctx.clearRect(0,0,1024,1024);
-      [alpha0,beta0,rawPos,smoothPos,lastTime,lastColor,lastLight,lastW]
-        .forEach(o=>Object.keys(o).forEach(k=>delete o[k]));
+    // Receive clear
+    socket.on('clear',()=>{
+      ctx.clearRect(0,0,c.width,c.height);
+      for(let k in points) points[k]=[];
     });
 
-    socket.on("motion",({alpha,beta,color,isDrawing,deviceId})=>{
-      if(!deviceId||typeof alpha!=="number")return;
-      const now=performance.now();
-      lastColor[deviceId]=color;
-      lastLight[deviceId]=parseLight(color);
+    // Catmull-Rom Interpolator
+    function catmullRom(t,p0,p1,p2,p3){
+      return 0.5*(
+        (2*p1) +
+        (-p0 + p2)*t +
+        (2*p0 -5*p1 +4*p2 -p3)*t*t +
+        (-p0 +3*p1 -3*p2 +p3)*t*t*t
+      );
+    }
 
-      // Kalibrierung
-      if(isDrawing && !(deviceId in alpha0)){
-        alpha0[deviceId]=alpha; beta0[deviceId]=beta;
-        rawPos[deviceId]={x:CX,y:CY};
-        smoothPos[deviceId]={x:CX,y:CY,t:now};
-        lastTime[deviceId]=now;
-        lastW[deviceId]=(MIN_W+MAX_W)/2;
+    // draw spline zwischen vier Punkten
+    function drawSpline(pts,color,w1,w2){
+      const steps = 20; // je 20 Unterteilungen pro Segment
+      for(let i=1;i<pts.length-2;i++){
+        const p0=pts[i-1], p1=pts[i], p2=pts[i+1], p3=pts[i+2];
+        for(let s=0; s<steps; s++){
+          const t0 = s/steps, t1=(s+1)/steps;
+          const x0 = catmullRom(t0,p0.x,p1.x,p2.x,p3.x),
+                y0 = catmullRom(t0,p0.y,p1.y,p2.y,p3.y),
+                x1 = catmullRom(t1,p0.x,p1.x,p2.x,p3.x),
+                y1 = catmullRom(t1,p0.y,p1.y,p2.y,p3.y),
+                w  = w1 + (w2 - w1)*(s/steps);
+          ctx.strokeStyle = color;
+          ctx.lineWidth   = w;
+          ctx.beginPath();
+          ctx.moveTo(x0,y0);
+          ctx.lineTo(x1,y1);
+          ctx.stroke();
+        }
       }
-      if(!(deviceId in alpha0))return;
+    }
 
-      // Winkel-Delta + Wrap
-      let dA=alpha-alpha0[deviceId];
-      if(dA>180)dA-=360;
-      if(dA<-180)dA+=360;
+    socket.on('motion',({alpha,beta,color,isDrawing,deviceId})=>{
+      if(!deviceId||typeof alpha!=='number')return;
+      const now=performance.now();
+      const arr = points[deviceId]||[];
+      // Kalibrieren
+      if(isDrawing && !alpha0[deviceId]){
+        alpha0[deviceId]=alpha;
+        beta0 [deviceId]=beta;
+      }
+      if(!alpha0[deviceId]) return;
+
+      // Map Winkel→Canvas
+      let dA=alpha-alpha0[deviceId]; if(dA>180)dA-=360; if(dA<-180)dA+=360;
       let dB=beta-beta0[deviceId];
       dA=Math.max(-MAX_H,Math.min(MAX_H,dA));
       dB=Math.max(-MAX_V,Math.min(MAX_V,dB));
+      const x= CX - (dA/MAX_H)*CX;
+      const y= CY - (dB/MAX_V)*CY;
 
-      // Map
-      const x = CX-(dA/MAX_H)*CX;
-      const y = CY-(dB/MAX_V)*CY;
+      // Geschwindigkeit
+      const prev= arr[arr.length-1]||{x,y,t:now};
+      const dt   = (now-prev.t)/1000;
+      const speed= dt>0?Math.hypot(x-prev.x,y-prev.y)/dt:0;
+      const norm = Math.min(1, speed/2000);
+      const w2   = MAX_W - (MAX_W-MIN_W)*norm,
+            w1   = prev.w2||w2;
 
-      // smoothing
-      const sp=smoothPos[deviceId];
-      sp.x+=(x-sp.x)*SMOOTH; sp.y+=(y-sp.y)*SMOOTH;
+      // push neues Kontroll-Punkt-Objekt
+      arr.push({x,y,t:now,color,w1,w2});
+      if(arr.length>10) arr.shift(); // max 10 Punkte
+      points[deviceId] = arr;
 
-      // speed
-      const dt=(now-sp.t)/1000,
-            dx=sp.x-rawPos[deviceId].x,
-            dy=sp.y-rawPos[deviceId].y,
-            speed= dt>0?Math.hypot(dx,dy)/dt:0;
-      sp.t=now;
-
-      rawPos[deviceId]={x,y};
-
-      if(isDrawing){
-        const norm=Math.min(1,speed/2000),
-              w2  = MAX_W-(MAX_W-MIN_W)*norm,
-              w1  = lastW[deviceId];
-        // Stück zeichnen
-        ctx.strokeStyle=color;
-        ctx.lineWidth= w1;
-        ctx.beginPath();
-        ctx.moveTo(sp.x-(sp.x-x), sp.y-(sp.y-y));
-        ctx.lineTo(sp.x, sp.y);
-        ctx.stroke();
-        lastW[deviceId]=w2;
+      // wenn wir zeichnen, spline zeichnen
+      if(isDrawing && arr.length>=4){
+        drawSpline(arr, color, w1, w2);
       }
-
-      // Puls-Punkt
-      // (können wir genau wie vorher implementieren)
     });
   </script>
 </body>
